# Second-Brain

./: README.md  index.html  package-lock.json  package.json
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: assistant_commands.rs  mod.rs  voice_assistant.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/monitors/: browser_monitor.rs  file_monitor.rs  mod.rs  window_monitor.rs
src-tauri/src/utils/: mod.rs
src/components/: Sidebar.module.css  Sidebar.tsx  Topbar.module.css  Topbar.tsx
src/components/assistant/: VoiceAssistant.module.css  VoiceAssistant.tsx
src/components/dashboard/: Dashboard.module.css  Dashboard.tsx
src/components/insights/: InsightsView.tsx
src/components/search/: SearchView.module.css  SearchView.tsx
src/components/settings/: SettingsView.module.css  SettingsView.tsx
src/components/timeline/: BrowserView.tsx  ClipboardView.module.css  ClipboardView.tsx  FilesView.tsx  Timeline.module.css  Timeline.tsx
src/store/: index.ts
src/styles/: globals.css
src/utils/: api.ts
