[package]
name = "second-brain"
version = "0.1.0"
description = "Personal Intelligence OS - AI Desktop Memory System"
authors = ["you"]
edition = "2021"
build = "build.rs"

[lib]
name = "second_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "second-brain"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
