[package]
name = "second-brain"
version = "0.1.0"
description = "Personal Intelligence OS - AI Desktop Memory System"
authors = ["you"]
edition = "2021"
build = "build.rs"

[lib]
name = "second_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "second-brain"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
